# Pictura

./: .gitignore  Cargo.toml  README.md  pictura
Excalidraw/: Drawing 2023-08-20 15.54.27.excalidraw.md
notes/: Drawing 2023-08-12 02.00.06.excalidraw.md  image.md  map.excalidraw.md  scrap.md
notes/scrap/: Capturer.md
src/: args.rs  gui.rs  image.rs  main.rs  selection_tool.rs
src/args/: gui.rs  image_proc.rs
src/fullscreenRectangle/: Cargo.toml
src/fullscreenRectangle/src/: main.rs
src/fullscreenRectangle/src/backups/: main.rs.bak
src/fullscreenRectangle/src/backups/drawRectRust1/src/: main.rs
src/fullscreenRectangle/src/backups/drawRectRust2/: Cargo.toml
src/fullscreenRectangle/src/backups/drawRectRust2/src/: main.rs
src/gui/: rectangle.rs  theme.rs
src/gui/app/: state.rs
src/selection_tool/: app.rs  theme.rs
src/selection_tool/app/: state.rs
