[package]
name = "Pictura"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"]}
iced = { version = "0.10.0", features = ["advanced", "canvas"] }
iced_winit = { version = "0.10.0", features = ["system"] }
iced_futures = "0.7.0"
iced_graphics = "0.9.0"
iced_native = "0.10.3"
image = "0.24.7"
screenshots = "0.7.3"
winit = "0.28.6"
