[package]
name = "test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { features = ["canvas", "advanced"] }
winit = "0.28.6"
iced_futures = "0.7.0"
iced_graphics = "0.9.0"
iced_native = "0.10.3"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]
